--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,3 +1,7 @@
+module(
+    name = "sysroots",
+)
+
 bazel_dep(name = "rules_pkg", version = "1.1.0")
 bazel_dep(name = "rules_oci", version = "2.2.6")
 bazel_dep(name = "rules_distroless", version = "0.5.1")
